<resources>
    <string name="app_name">Krucils</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="registerhere">No account yet? Create one</string>
    <string name="register">Signup</string>
    <string name="guest">Guest</string>
    <string name="welcome">"Selamat datang \n"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="field_empty">Tolong isi semua field.</string>

    <string name="sendchat">Send</string>

    <string name="submit_username">Change Username</string>
    <string name="submit_verify_email">Change Email</string>
    <string name="oldpass">Old Password</string>
    <string name="newpass">New Password</string>
    <string name="confirmpass">Retype New Password</string>
    <string name="submit_password">Change Password</string>
</resources>
