<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText android:id="@+id/profile_username"
            android:layout_width="0dp"
            android:layout_weight="8.5"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <Button
            android:id="@+id/change_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/submit_username"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp">

        <EditText android:id="@+id/profile_email"
            android:layout_width="0dp"
            android:layout_weight="8.5"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"/>

        <Button
            android:id="@+id/change_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/submit_verify_email"/>

    </LinearLayout>


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="56dp">

        <EditText android:id="@+id/profile_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/oldpass"/>

        <EditText android:id="@+id/profile_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/newpass"/>

        <EditText android:id="@+id/profile_new_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/confirmpass"/>

        <Button
            android:id="@+id/change_pass"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/submit_password"/>


    </LinearLayout>


    </LinearLayout>
</ScrollView>